# HelloIlluminati

./: .gitignore  README.md
app/src/main/cpp/helloilluminati/: .always_do_post_build.h  CMakeLists.txt  main.cpp
app/src/main/cpp/helloilluminati/include/: file.h  logger.h  renderer.h  shader.h  texture.h
app/src/main/cpp/helloilluminati/libs/glfw/docs/html/: annotated.html  bug.html  build_8dox.html  build_guide.html  classes.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  dir_1f12d41534b9d9c99a183e145b58d6f3.html  dir_351f617146de9499414a6c099ebbe0ca.html  dir_4bcf8e981abe5adb811ce4f57d70c9af.html  files.html  functions.html  functions_vars.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_b.html  globals_defs_c.html  globals_defs_d.html  globals_defs_e.html  globals_defs_f.html  globals_defs_g.html  globals_defs_h.html  globals_defs_i.html  globals_defs_j.html  globals_defs_k.html  globals_defs_l.html  globals_defs_m.html  (+62 more)
app/src/main/cpp/helloilluminati/libs/glfw/examples/: wave.c
app/src/main/cpp/helloilluminati/libs/glfw/tests/: clipboard.c  events.c  gamma.c  iconify.c  joysticks.c  monitors.c  msaa.c  reopen.c  tearing.c  title.c
app/src/main/cpp/helloilluminati/libs/stbimage/: CMakeLists.txt
app/src/main/cpp/helloilluminati/libs/stbimage/include/: stb_image.h
app/src/main/cpp/helloilluminati/shaders/: vertex_shader.glsl
app/src/main/cpp/helloilluminati/src/: file.cpp  renderer.cpp  shader.cpp  texture.cpp
(+398 files in other folders)
